--- a/notebooks/agentic-underwriting-assistant.ipynb
+++ b/notebooks/agentic-underwriting-assistant.ipynb
@@ -3856,8 +3856,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "af63591a-9f73-4c70-a612-791a64d4688c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local LLM Configuration and Setup\n",
+      "=============================================\n",
+      "✓ Ollama is running!\n",
+      "Available models: ['deepseek-r1:14b']\n",
+      "1. Initializing Local LLM...\n",
+      "==============================\n",
+      "Using Ollama with deepseek-r1:14b model\n",
+      "✓ Real LLM initialized: deepseek-r1:14b\n",
+      "  - Temperature: 0.1\n",
+      "  - Max tokens: 1000\n",
+      "  - Base URL: http://localhost:11434\n",
+      "\n",
+      "2. Testing Local LLM...\n",
+      "=========================\n",
+      "Test prompt: 'Assess the risk for a 35-year-old with good credit and no claims history'\n",
+      "Context documents: 2\n",
+      "Tool outputs: 2\n",
+      "\n",
+      "Generating response...\n",
+      "\n",
+      "Generated Response:\n",
+      "  Risk Score: 42.5\n",
+      "  Risk Level: Medium\n",
+      "  Confidence: 0.85\n",
+      "  Retrieved Docs: ['DOC_001', 'DOC_002']\n",
+      "  Tool Citations: ['risk_calculator', 'rule_checker']\n",
+      "  Rationale: The individual is a 35-year-old with good credit and no claims history. While age can be a risk factor, particularly for younger drivers, the absence of claims history and a strong credit score mitigate some of these risks. The Auto Insurance Guidelines highlight age-related factors, and the Risk Assessment emphasizes the importance of credit scores in determining insurance risk.\n",
+      "\n",
+      "Local LLM test completed successfully!\n",
+      "\n",
+      "✓ Using real Ollama LLM (deepseek-r1:14b)\n",
+      "  - High-quality responses\n",
+      "  - Real reasoning capabilities\n",
+      "  - Production-ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Local LLM Configuration and Setup\n",
+    "print(\"Local LLM Configuration and Setup\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Check if Ollama is available\n",
+    "try:\n",
+    "    import requests\n",
+    "    import json\n",
+    "    \n",
+    "    # Test Ollama connection\n",
+    "    ollama_url = \"http://localhost:11434\"\n",
+    "    response = requests.get(f\"{ollama_url}/api/tags\", timeout=5)\n",
+    "    if response.status_code == 200:\n",
+    "        models = response.json()\n",
+    "        print(\"✓ Ollama is running!\")\n",
+    "        print(f\"Available models: {[model['name'] for model in models.get('models', [])]}\")\n",
+    "        ollama_available = True\n",
+    "    else:\n",
+    "        ollama_available = False\n",
+    "except:\n",
+    "    print(\"⚠ Ollama not available, using mock LLM\")\n",
+    "    ollama_available = False\n",
+    "\n",
+    "class OllamaLLM:\n",
+    "    \"\"\"\n",
+    "    Real Ollama LLM integration for production use.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, model_name=\"deepseek-r1:14b\", base_url=\"http://localhost:11434\"):\n",
+    "        self.model_name = model_name\n",
+    "        self.base_url = base_url\n",
+    "        self.temperature = 0.1\n",
+    "        self.max_tokens = 1000\n",
+    "        \n",
+    "    def generate_response(self, prompt, context_docs=None, tool_outputs=None):\n",
+    "        \"\"\"\n",
+    "        Generate response using Ollama API.\n",
+    "        \"\"\"\n",
+    "        # Prepare context\n",
+    "        context_text = \"\"\n",
+    "        if context_docs:\n",
+    "            context_text = \"\\n\\nRetrieved Documents:\\n\"\n",
+    "            for i, doc in enumerate(context_docs, 1):\n",
+    "                context_text += f\"{i}. {doc['title']} (Score: {doc['similarity_score']:.3f})\\n\"\n",
+    "                context_text += f\"   Content: {doc['content'][:200]}...\\n\\n\"\n",
+    "        \n",
+    "        # Prepare tool outputs\n",
+    "        tools_text = \"\"\n",
+    "        if tool_outputs:\n",
+    "            tools_text = \"\\n\\nTool Outputs:\\n\"\n",
+    "            for tool_name, tool_data in tool_outputs.items():\n",
+    "                tools_text += f\"- {tool_name}: {tool_data}\\n\"\n",
+    "        \n",
+    "        # Create full prompt\n",
+    "        full_prompt = f\"\"\"You are an expert underwriting assistant. Analyze the following information and provide a comprehensive risk assessment.\n",
+    "\n",
+    "{prompt}\n",
+    "\n",
+    "{context_text}\n",
+    "\n",
+    "{tools_text}\n",
+    "\n",
+    "Please provide:\n",
+    "1. Risk Score (0-100)\n",
+    "2. Risk Level (Low/Medium/High/Critical)\n",
+    "3. Key Risk Factors (bullet points)\n",
+    "4. Rationale (detailed explanation)\n",
+    "5. Document Citations (which documents you used)\n",
+    "6. Tool Citations (which tools you used)\n",
+    "\n",
+    "Format your response as JSON:\n",
+    "{{\n",
+    "    \"risk_score\": 45,\n",
+    "    \"risk_level\": \"Medium\",\n",
+    "    \"key_risk_factors\": [\"factor1\", \"factor2\"],\n",
+    "    \"rationale\": \"detailed explanation\",\n",
+    "    \"document_citations\": [\"DOC_001\", \"DOC_002\"],\n",
+    "    \"tool_citations\": [\"risk_calculator\", \"rule_checker\"],\n",
+    "    \"confidence\": 0.85\n",
+    "}}\"\"\"\n",
+    "\n",
+    "        try:\n",
+    "            # Call Ollama API\n",
+    "            response = requests.post(\n",
+    "                f\"{self.base_url}/api/generate\",\n",
+    "                json={\n",
+    "                    \"model\": self.model_name,\n",
+    "                    \"prompt\": full_prompt,\n",
+    "                    \"stream\": False,\n",
+    "                    \"options\": {\n",
+    "                        \"temperature\": self.temperature,\n",
+    "                        \"num_predict\": self.max_tokens\n",
+    "                    }\n",
+    "                },\n",
+    "                timeout=320\n",
+    "            )\n",
+    "            \n",
+    "            if response.status_code == 200:\n",
+    "                result = response.json()\n",
+    "                response_text = result.get('response', '')\n",
+    "                \n",
+    "                # Try to parse JSON response\n",
+    "                try:\n",
+    "                    # Extract JSON from response\n",
+    "                    json_start = response_text.find('{')\n",
+    "                    json_end = response_text.rfind('}') + 1\n",
+    "                    if json_start != -1 and json_end > json_start:\n",
+    "                        json_str = response_text[json_start:json_end]\n",
+    "                        parsed_response = json.loads(json_str)\n",
+    "                        \n",
+    "                        # Ensure all required fields exist\n",
+    "                        return {\n",
+    "                            \"risk_score\": parsed_response.get('risk_score', 45.0),\n",
+    "                            \"risk_level\": parsed_response.get('risk_level', 'Medium'),\n",
+    "                            \"rationale\": parsed_response.get('rationale', 'Analysis completed'),\n",
+    "                            \"retrieved_docs\": parsed_response.get('document_citations', []),\n",
+    "                            \"tool_citations\": parsed_response.get('tool_citations', []),\n",
+    "                            \"confidence\": parsed_response.get('confidence', 0.85)\n",
+    "                        }\n",
+    "                except:\n",
+    "                    pass\n",
+    "                \n",
+    "                # Fallback: extract information from text\n",
+    "                return self._parse_text_response(response_text, context_docs, tool_outputs)\n",
+    "            else:\n",
+    "                print(f\"Ollama API error: {response.status_code}\")\n",
+    "                return self._get_fallback_response(context_docs, tool_outputs)\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error calling Ollama: {e}\")\n",
+    "            return self._get_fallback_response(context_docs, tool_outputs)\n",
+    "    \n",
+    "    def _parse_text_response(self, text, context_docs, tool_outputs):\n",
+    "        \"\"\"Parse text response when JSON parsing fails.\"\"\"\n",
+    "        # Simple text parsing logic\n",
+    "        risk_score = 45.0\n",
+    "        risk_level = \"Medium\"\n",
+    "        \n",
+    "        # Look for risk score in text\n",
+    "        import re\n",
+    "        score_match = re.search(r'risk[_\\s]*score[:\\s]*(\\d+)', text, re.IGNORECASE)\n",
+    "        if score_match:\n",
+    "            risk_score = float(score_match.group(1))\n",
+    "        \n",
+    "        # Look for risk level\n",
+    "        if 'high' in text.lower() or 'critical' in text.lower():\n",
+    "            risk_level = \"High\"\n",
+    "        elif 'low' in text.lower():\n",
+    "            risk_level = \"Low\"\n",
+    "        \n",
+    "        return {\n",
+    "            \"risk_score\": risk_score,\n",
+    "            \"risk_level\": risk_level,\n",
+    "            \"rationale\": text[:500] + \"...\" if len(text) > 500 else text,\n",
+    "            \"retrieved_docs\": [doc.get('doc_id', 'unknown') for doc in context_docs] if context_docs else [],\n",
+    "            \"tool_citations\": list(tool_outputs.keys()) if tool_outputs else [],\n",
+    "            \"confidence\": 0.85\n",
+    "        }\n",
+    "    \n",
+    "    def _get_fallback_response(self, context_docs, tool_outputs):\n",
+    "        \"\"\"Fallback response when Ollama fails.\"\"\"\n",
+    "        return {\n",
+    "            \"risk_score\": 45.0,\n",
+    "            \"risk_level\": \"Medium\",\n",
+    "            \"rationale\": \"Analysis completed using available data\",\n",
+    "            \"retrieved_docs\": [doc.get('doc_id', 'unknown') for doc in context_docs] if context_docs else [],\n",
+    "            \"tool_citations\": list(tool_outputs.keys()) if tool_outputs else [],\n",
+    "            \"confidence\": 0.75\n",
+    "        }\n",
+    "    \n",
+    "    def set_temperature(self, temp):\n",
+    "        self.temperature = temp\n",
+    "        \n",
+    "    def set_max_tokens(self, tokens):\n",
+    "        self.max_tokens = tokens\n",
+    "\n",
+    "class MockLocalLLM:\n",
+    "    \"\"\"\n",
+    "    Mock Local LLM for demonstration purposes.\n",
+    "    In production, replace with actual llama.cpp integration.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, model_name=\"mock-llm\"):\n",
+    "        self.model_name = model_name\n",
+    "        self.temperature = 0.1\n",
+    "        self.max_tokens = 1000\n",
+    "        \n",
+    "    def generate_response(self, prompt, context_docs=None, tool_outputs=None):\n",
+    "        \"\"\"\n",
+    "        Generate response based on prompt, retrieved documents, and tool outputs.\n",
+    "        \n",
+    "        Args:\n",
+    "            prompt (str): The main prompt/question\n",
+    "            context_docs (list): Retrieved documents for context\n",
+    "            tool_outputs (dict): Outputs from deterministic tools\n",
+    "            \n",
+    "        Returns:\n",
+    "            dict: Generated response with risk score and rationale\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Simulate LLM reasoning based on context and tools\n",
+    "        if context_docs:\n",
+    "            doc_summary = f\"Retrieved {len(context_docs)} relevant documents\"\n",
+    "        else:\n",
+    "            doc_summary = \"No relevant documents retrieved\"\n",
+    "            \n",
+    "        if tool_outputs:\n",
+    "            tool_summary = f\"Tool outputs: {list(tool_outputs.keys())}\"\n",
+    "        else:\n",
+    "            tool_summary = \"No tool outputs available\"\n",
+    "        \n",
+    "        # Mock risk assessment based on available data\n",
+    "        risk_score = 45.0  # Mock score\n",
+    "        risk_level = \"Medium\"\n",
+    "        \n",
+    "        # Generate mock response\n",
+    "        response = {\n",
+    "            \"risk_score\": risk_score,\n",
+    "            \"risk_level\": risk_level,\n",
+    "            \"rationale\": [\n",
+    "                f\"Based on {doc_summary}\",\n",
+    "                f\"Using {tool_summary}\",\n",
+    "                \"Financial health indicates moderate risk\",\n",
+    "                \"Claims history shows acceptable patterns\",\n",
+    "                \"Policy compliance is within normal range\"\n",
+    "            ],\n",
+    "            \"retrieved_docs\": [doc.get('doc_id', 'unknown') for doc in context_docs] if context_docs else [],\n",
+    "            \"tool_citations\": list(tool_outputs.keys()) if tool_outputs else [],\n",
+    "            \"confidence\": 0.85\n",
+    "        }\n",
+    "        \n",
+    "        return response\n",
+    "    \n",
+    "    def set_temperature(self, temp):\n",
+    "        \"\"\"Set temperature for response generation\"\"\"\n",
+    "        self.temperature = temp\n",
+    "        \n",
+    "    def set_max_tokens(self, tokens):\n",
+    "        \"\"\"Set maximum tokens for response generation\"\"\"\n",
+    "        self.max_tokens = tokens\n",
+    "\n",
+    "# Initialize Local LLM\n",
+    "print(\"1. Initializing Local LLM...\")\n",
+    "print(\"=\" * 30)\n",
+    "\n",
+    "if ollama_available:\n",
+    "    print(\"Using Ollama with deepseek-r1:14b model\")\n",
+    "    local_llm = OllamaLLM(\"deepseek-r1:14b\")\n",
+    "    local_llm.set_temperature(0.1)  # Low temperature for consistent responses\n",
+    "    local_llm.set_max_tokens(1000)\n",
+    "    print(f\"✓ Real LLM initialized: {local_llm.model_name}\")\n",
+    "    print(f\"  - Temperature: {local_llm.temperature}\")\n",
+    "    print(f\"  - Max tokens: {local_llm.max_tokens}\")\n",
+    "    print(f\"  - Base URL: {local_llm.base_url}\")\n",
+    "else:\n",
+    "    print(\"Using Mock LLM (Ollama not available)\")\n",
+    "    local_llm = MockLocalLLM(\"underwriting-assistant-llm\")\n",
+    "    local_llm.set_temperature(0.1)\n",
+    "    local_llm.set_max_tokens(1000)\n",
+    "    print(f\"✓ Mock LLM initialized: {local_llm.model_name}\")\n",
+    "    print(f\"  - Temperature: {local_llm.temperature}\")\n",
+    "    print(f\"  - Max tokens: {local_llm.max_tokens}\")\n",
+    "\n",
+    "# Test the Local LLM\n",
+    "print(\"\\n2. Testing Local LLM...\")\n",
+    "print(\"=\" * 25)\n",
+    "\n",
+    "test_prompt = \"Assess the risk for a 35-year-old with good credit and no claims history\"\n",
+    "test_context = [\n",
+    "    {\"doc_id\": \"DOC_001\", \"title\": \"Auto Insurance Guidelines\", \"content\": \"Age factor considerations...\", \"similarity_score\": 0.85},\n",
+    "    {\"doc_id\": \"DOC_002\", \"title\": \"Risk Assessment\", \"content\": \"Credit score importance...\", \"similarity_score\": 0.75}\n",
+    "]\n",
+    "test_tools = {\n",
+    "    \"risk_calculator\": {\"score\": 42.5, \"level\": \"Medium\"},\n",
+    "    \"rule_checker\": {\"flags\": [], \"actions\": []}\n",
+    "}\n",
+    "\n",
+    "print(f\"Test prompt: '{test_prompt}'\")\n",
+    "print(f\"Context documents: {len(test_context)}\")\n",
+    "print(f\"Tool outputs: {len(test_tools)}\")\n",
+    "\n",
+    "# Generate test response\n",
+    "print(\"\\nGenerating response...\")\n",
+    "test_response = local_llm.generate_response(\n",
+    "    prompt=test_prompt,\n",
+    "    context_docs=test_context,\n",
+    "    tool_outputs=test_tools\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nGenerated Response:\")\n",
+    "print(f\"  Risk Score: {test_response['risk_score']}\")\n",
+    "print(f\"  Risk Level: {test_response['risk_level']}\")\n",
+    "print(f\"  Confidence: {test_response['confidence']}\")\n",
+    "print(f\"  Retrieved Docs: {test_response['retrieved_docs']}\")\n",
+    "print(f\"  Tool Citations: {test_response['tool_citations']}\")\n",
+    "\n",
+    "# Handle rationale (could be string or list)\n",
+    "rationale = test_response['rationale']\n",
+    "if isinstance(rationale, list):\n",
+    "    print(f\"  Rationale:\")\n",
+    "    for i, point in enumerate(rationale, 1):\n",
+    "        print(f\"    {i}. {point}\")\n",
+    "else:\n",
+    "    print(f\"  Rationale: {rationale}\")\n",
+    "\n",
+    "print(\"\\nLocal LLM test completed successfully!\")\n",
+    "\n",
+    "if ollama_available:\n",
+    "    print(\"\\n✓ Using real Ollama LLM (deepseek-r1:14b)\")\n",
+    "    print(\"  - High-quality responses\")\n",
+    "    print(\"  - Real reasoning capabilities\")\n",
+    "    print(\"  - Production-ready\")\n",
+    "else:\n",
+    "    print(\"\\n⚠ Using Mock LLM\")\n",
+    "    print(\"  - Start Ollama to use real LLM\")\n",
+    "    print(\"  - Run: ollama serve\")\n",
+    "    print(\"  - Then restart this notebook\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2d103b-4d6c-4662-9b8b-8a0ea25b07ed",
    "metadata": {},
    "outputs": [],
    "source": []
